src/test/ui/type-alias-impl-trait/issue-94429.stderr
error[E0271]: type mismatch resolving `<[generator@$DIR/issue-94429.rs:17:9: 19:10] as Generator>::Yield == ()`
  --> $DIR/issue-94429.rs:15:26
   |
LL |     fn run(&mut self) -> Self::Gen {
   |                          ^^^^^^^^^ expected integer, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
